[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/text/basic32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/btns/Pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/btns/Normal.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/btns/Disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/btns/Hover.tres" type="StyleBox" id=5]
[ext_resource path="res://src/titleScreen/StartGameScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/text/Kenney Mini Square.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="StartGameScreen" type="Node2D"]
script = ExtResource( 6 )

[node name="ininfiteButton" type="Button" parent="."]
margin_left = 99.4444
margin_top = 397.844
margin_right = 319.444
margin_bottom = 445.844
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Boss Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trialButton" type="Button" parent="."]
margin_left = 79.0741
margin_top = 553.297
margin_right = 335.074
margin_bottom = 601.297
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Time Trial Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 388.855
margin_top = 401.637
margin_right = 1032.86
margin_bottom = 441.637
custom_fonts/font = ExtResource( 1 )
text = "Fight monsters, then bosses, escape the lands!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 339.066
margin_top = 21.9092
margin_right = 971.066
margin_bottom = 101.909
custom_fonts/font = SubResource( 2 )
text = "Select a difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 404.902
margin_top = 534.754
margin_right = 1100.9
margin_bottom = 617.754
custom_fonts/font = ExtResource( 1 )
text = "one level, let's see how long you survive
no weapons allowed
(only fun at higher difficulties)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 136.811
margin_top = 137.461
margin_right = 1157.81
margin_bottom = 204.461
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="."]
margin_left = 18.4997
margin_top = 18.4997
margin_right = 136.5
margin_bottom = 78.4997
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="powerUpPressed" type="Button" parent="."]
margin_left = 2049.77
margin_top = -357.5
margin_right = 2349.77
margin_bottom = -275.5
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Choose Powerups"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ininfiteButton" to="." method="_on_ininfiteButton_pressed"]
[connection signal="pressed" from="trialButton" to="." method="_on_trialButton_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="powerUpPressed" to="." method="_on_powerUpPressed_pressed"]
